--- a/index.html
+++ b/index.html
@@ -1,49 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cuango Prospect</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <header>
-            <h1>Cuango Prospect</h1>
-            <p>Operated by Farside Actual</p>
-            <hr>
-        </header>
-        <section class="tagline">
-            <h2>Strategic Risk | Intelligence Integration | Asset Continuity</h2>
-        </section>
-        <section class="intro">
-            <p>We operate where governance ends.</p>
-            <p>Cuango Prospect specialises in discreet strategic solutions for clients navigating hostile, opaque, or rapidly evolving environments. Our core advisors and field operators have supported missions across the security, energy, political, and defence sectors, often in regions considered grey or denied.</p>
-        </section>
-        <section class="services">
-            <ul>
-                <li>Ground-level project assurance in fluid threat environments</li>
-                <li>Strategic advisory on infrastructure continuity, asset extraction, and political stabilisation</li>
-                <li>Intelligence-led risk monitoring (HUMINT, SIGINT, IMINT)</li>
-                <li>Embedded support for governmental and private sector initiatives</li>
-                <li>Executive and diplomatic movement support</li>
-                <li>Crisis suite coordination and post-incident actioning</li>
-            </ul>
-        </section>
-        <section class="footprint">
-            <p>From the mineral belts of Central Africa to energy corridors in the Middle East, from South American interiors to Eurasian critical assets, our work is discreet, necessary, and enduring.</p>
-        </section>
-        <section class="contact">
-            <h3>Contact</h3>
-            <form action="https://formsubmit.co/dkc-rog@protonmail.com" method="POST">
-                <input type="hidden" name="_captcha" value="false">
-                <label for="name">Your Name / Alias / Handle</label>
-                <input type="text" id="name" name="name" required>
-                <label for="message">Message</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
-                <button type="submit">Initiate Contact</button>
-            </form>
-        </section>
-    </div>
-</body>
-</html>
+<!-- Homepage HTML with dark mode + logo inserted -->
