--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-<!-- Homepage HTML with dark mode + logo inserted -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Cuango Prospect</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Cuango Prospect</h1>
+    <p>Operated by Farside Actual</p>
+  </header>
+  <nav>
+    <a href="leadership.html">Senior Leadership</a>
+  </nav>
+  <main>
+    <section>
+      <h2>Strategic Risk | Intelligence Integration | Asset Continuity</h2>
+      <p>We operate where governance ends.</p>
+      <p>Cuango Prospect specialises in discreet strategic solutions for clients navigating hostile, opaque, or rapidly evolving environments. Our core advisors and field operators have supported missions across the security, energy, political, and defence sectors, often in regions considered grey or denied.</p>
+    </section>
+    <section>
+      <ul>
+        <li>Ground-level project assurance in fluid threat environments</li>
+        <li>Strategic advisory on infrastructure continuity, asset extraction, and political stabilisation</li>
+        <li>Intelligence-led risk monitoring (HUMINT, SIGINT, IMINT)</li>
+        <li>Embedded support for governmental and private sector initiatives</li>
+        <li>Executive and diplomatic movement support</li>
+        <li>Crisis suite coordination and post-incident actioning</li>
+      </ul>
+    </section>
+    <section>
+      <p>From the mineral belts of Central Africa to energy corridors in the Middle East, from South American interiors to Eurasian critical assets, our work is discreet, necessary, and enduring.</p>
+    </section>
+    <section class="contact">
+      <h3>Contact</h3>
+      <form action="https://formsubmit.co/dkc-rog@protonmail.com" method="POST">
+        <input type="hidden" name="_captcha" value="false">
+        <label for="name">Your Name / Alias / Handle</label>
+        <input type="text" name="name" required>
+        <label for="message">Message</label>
+        <textarea name="message" rows="5" required></textarea>
+        <button type="submit">Initiate Contact</button>
+      </form>
+    </section>
+  </main>
+  <footer>
+    <p>© Cuango Prospect – Operational discretion maintained</p>
+  </footer>
+</body>
+</html>
