--- a/leadership.html
+++ b/leadership.html
@@ -1,1 +1,62 @@
-<!-- Leadership Team HTML with bios, silhouettes, styled in dark mode -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Leadership – Cuango Prospect</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Senior Leadership</h1>
+    <a href="index.html">← Return Home</a>
+  </header>
+  <main>
+    <section class="leader">
+      <div class="avatar"></div>
+      <div>
+        <h2>J V Deventer – Global Security Manager</h2>
+        <p>Project manager with 35 years in rapid reaction military service. Intelligence analyst with operational history across the Middle East, Africa, and Latin America. Precision-led, logistics fluent, and regionally fluent.</p>
+      </div>
+    </section>
+    <section class="leader">
+      <div class="avatar"></div>
+      <div>
+        <h2>W. Steyn – Global Training, Education and Compliance</h2>
+        <p>Dual graduate in politics and philosophy. 26 years as a front line army officer. Brings cohesive doctrine and operational ethics to a range of high-intensity training environments.</p>
+      </div>
+    </section>
+    <section class="leader">
+      <div class="avatar"></div>
+      <div>
+        <h2>Paul "Salty" R – HUMINT & Field Tradecraft</h2>
+        <p>Two decades in airborne operations and private military contracting. HUMINT specialist and vetted asset with multiple intelligence agencies. 12 operational deployments. Lead instructor in firearms, fieldcraft, and urban tradecraft.</p>
+      </div>
+    </section>
+    <section class="leader">
+      <div class="avatar"></div>
+      <div>
+        <h2>Jonno Ewen – Intelligence Coordination & Analytics</h2>
+        <p>11 years in South African intelligence. Global trainer for localised agency support in corporate asset protection. Operates precision-based briefings underpinned by actionable statistics and intelligence.</p>
+      </div>
+    </section>
+    <section class="leader">
+      <div class="avatar"></div>
+      <div>
+        <h2>Tim Marrinan – Lead Medic & Compliance Trainer</h2>
+        <p>Former SF unit medic, trauma response specialist, now head of medical compliance. Calm under pressure and operationally decisive. Recruited by “Salty” for his quiet efficiency and unshakable control.</p>
+      </div>
+    </section>
+    <section class="leader">
+      <div class="avatar"></div>
+      <div>
+        <h2>Edward Wilton – Chief Strategy Officer</h2>
+        <p>Corporate strategist with 19 years in natural resource extraction. Validates engagements and client background with precision. Works closely with Salty and Jonno to streamline mission viability.</p>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <p>© Cuango Prospect – Eyes Forward</p>
+  </footer>
+</body>
+</html>
