--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <h3>Contact</h3>
       <form action="https://formsubmit.co/dkc-rog@protonmail.com" method="POST">
         <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_next" value="https://cuangoprospect.com">
         <label for="name">Your Name / Alias / Handle</label>
         <input type="text" name="name" required>
         <label for="message">Message</label>
