--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cuango Prospect</title>
   <link rel="stylesheet" href="style.css">
+
+  <!-- SEO META -->
+  <meta name="description" content="Cuango Prospect – Discreet strategic risk and security solutions in hostile and complex regions.">
+  <meta name="keywords" content="cuango, farside actual, strategic security, risk advisory, HUMINT, SIGINT, private military, crisis response, asset continuity">
+  <meta name="author" content="Northman Stratsec Ltd">
+  <meta name="robots" content="index, follow">
+
+  <!-- SOCIAL / PREVIEW (Open Graph) -->
+  <meta property="og:title" content="Cuango Prospect">
+  <meta property="og:description" content="Discreet strategic solutions. Operational where governance ends.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://cuangoprospect.com">
+  <meta property="og:image" content="https://cuangoprospect.com/logo.png">
+
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <header>
@@ -34,50 +50,48 @@
       <p>From the mineral belts of Central Africa to energy corridors in the Middle East, from South American interiors to Eurasian critical assets, our work is discreet, necessary, and enduring.</p>
     </section>
     <section class="contact">
-  <h3>Contact</h3>
-  <form id="contact-form">
-    <label for="name">Your Name / Alias / Handle</label>
-    <input type="text" name="name" required>
+      <h3>Contact</h3>
+      <form id="contact-form">
+        <label for="name">Your Name / Alias / Handle</label>
+        <input type="text" name="name" required>
 
-    <label for="message">Message</label>
-    <textarea name="message" rows="5" required></textarea>
+        <label for="message">Message</label>
+        <textarea name="message" rows="5" required></textarea>
 
-    <button type="submit">Initiate Contact</button>
-  </form>
+        <button type="submit">Initiate Contact</button>
+      </form>
 
-  <p id="thank-you" style="display:none; margin-top: 1em; color: orange;">
-    Thank you — message sent securely.
-  </p>
-</section>
+      <p id="thank-you" style="display:none; margin-top: 1em; color: orange;">
+        Thank you — message sent securely.
+      </p>
+    </section>
 
-<script>
-  const form = document.getElementById("contact-form");
-  const thankYou = document.getElementById("thank-you");
+    <script>
+      const form = document.getElementById("contact-form");
+      const thankYou = document.getElementById("thank-you");
 
-  form.addEventListener("submit", function (e) {
-    e.preventDefault();
+      form.addEventListener("submit", function (e) {
+        e.preventDefault();
 
-    const data = new FormData(form);
-    fetch("https://formsubmit.co/ajax/bab2ecb6e191991251cbe54f86512bfa", {
-      method: "POST",
-      body: data
-    })
-    .then(response => {
-      if (response.ok) {
-        form.reset();
-        thankYou.style.display = "block";
-      } else {
-        alert("Message failed. Please try again later.");
-      }
-    })
-    .catch(error => {
-      alert("Something went wrong.");
-      console.error(error);
-    });
-  });
-</script>
-
-
+        const data = new FormData(form);
+        fetch("https://formsubmit.co/ajax/bab2ecb6e191991251cbe54f86512bfa", {
+          method: "POST",
+          body: data
+        })
+        .then(response => {
+          if (response.ok) {
+            form.reset();
+            thankYou.style.display = "block";
+          } else {
+            alert("Message failed. Please try again later.");
+          }
+        })
+        .catch(error => {
+          alert("Something went wrong.");
+          console.error(error);
+        });
+      });
+    </script>
   </main>
   <footer>
     <p>© Cuango Prospect – Operational discretion maintained</p>
